Fixed header alignment

--- a/styles.css
+++ b/styles.css
@@ -45,10 +45,13 @@ a:hover {
 }
 
 #banner {
+  display: flex;
+  flex-direction: column;
   background-image: url("https://picsum.photos/1000/600?random");
   background-size: cover;
   text-align: center;
-  justify-content: center;
+
+  align-items: center;
   padding: 150px;
   color: white;
   text-shadow: 1px 1px 5px black;
@@ -58,6 +61,7 @@ a:hover {
   color: white;
   /* font-size: 50px; */
   font-size: clamp(3rem, 10vw, 4rem);
+  text-align: center;
 }
 
 #banner p {
@@ -65,6 +69,11 @@ a:hover {
   opacity: 0.8;
   font-size: 2rem;
   font-weight: lighter;
+  text-align: center;
+}
+
+#banner a.btn {
+  opacity: 1;
 }
 
 #footer {
